fix alignment of quickmarks listing + update todo

--- a/app/colors/default.css
+++ b/app/colors/default.css
@@ -386,7 +386,7 @@ body:not(#app) ::placeholder {color: var(--placeholder-text);}
 #favorites, #topsites {margin: 1em 0;display: none;max-width: 80vw;min-width: 42em;width: auto;flex-grow: 1;flex-basis: 50%;}
 #newtabpage small {font-size: .7em;text-decoration: underline;}
 /* notifications */
-#notificationspage .notification {background: var(--special-page-element-bg);border: .1em solid var(--notification-border);margin: .35em 0;padding: .35em;overflow-wrap: anywhere;/*white-space: pre-wrap;*/}
+#notificationspage .notification {background: var(--special-page-element-bg);border: .1em solid var(--notification-border);margin: .35em 0;padding: .35em;overflow-wrap: anywhere;white-space: pre-wrap;}
 #notificationspage .date {color: var(--notification-date);}
 #notificationspage .permission {color: var(--notification-permission);}
 #notificationspage .dialog {color: var(--notification-dialog);}
